syntax = "proto3";

package sportarea;

service SportareaService {
  rpc Create(CreateSportareaRequest) returns (CreateSportareaResponse) {}

}

message CreateSportareaRequest {
  string name =1;
  string imageURL =2;
  bool shower =3;
  bool carPark =4;
  string sportType =5;
  string location  =6 ;
  float latitude  =7 ;
  float longtitude = 8;
  string description = 9;
  int32 price = 10;
  
}

message CreateSportareaResponse {
  string name =1;
  string imageURL =2;
  bool shower =3;
  bool carPark =4;
  string sportType =5;
  string location  =6 ;
  float latitude  =7 ;
  float longtitude = 8;
  string description = 9;
  int32 price = 10;
}
  
